Fix height-based squishing of the header backgrounds, and update preloads

--- a/assets/less/pages/products.less
+++ b/assets/less/pages/products.less
@@ -27,7 +27,7 @@
     background-color: black;
     background-image: var(--bg-hero), var(--bg-hero-gradient);
     background-image: var(--bg-hero-set), var(--bg-hero-gradient);
-    background-size: auto 70vh, 100%;
+    background-size: auto 85%, 100%;
     background-position: bottom center, center;
     background-repeat: no-repeat;
     color: var(--color-gray-20);
